chain/connector/src/connector/snapshots/hopr_chain_connector__connector__sequencer__tests__sequencer_should_increase_nonce_after_successful_tx.snap
---
source: chain/connector/src/connector/sequencer.rs
expression: "*blokli_client.snapshot()"
---
accounts: {}
unpaired_safes: {}
native_balances:
  "0101010101010101010101010101010101010101":
    __typename: NativeBalance
    balance: 0 xDai
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: NativeBalance
    balance: 9.999999999999999999 xDai
token_balances:
  "0101010101010101010101010101010101010101":
    __typename: HoprBalance
    balance: 100 wxHOPR
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: HoprBalance
    balance: 900 wxHOPR
safe_allowances: {}
tx_counts:
  668430def9eacd2b5064acf85d73fb0b351a1c8c: 1
channels: {}
chain_info:
  channel_closure_grace_period: "300"
  channel_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  block_number: 1
  chain_id: 100
  ledger_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  min_ticket_winning_probability: 1
  key_binding_fee: 0.01 wxHOPR
  safe_registry_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  ticket_price: 1 wxHOPR
  network: rotsee
  contract_addresses: "{\"announcements\":\"0x45b000742a693AB00fA4839a086dfB6155a15D3C\",\"channels\":\"0x9680F21d4583ad27F2e6bc3005EDF120FFf057B7\",\"module_implementation\":\"0x79C3bF06E96A9373765284aFb0a35e9529E2B3F2\",\"node_safe_migration\":\"0xe9670B5D87c87111C9050D915971B73b9f5021a9\",\"node_safe_registry\":\"0xaFa257f2799835D2E29e7eC7ee448530F9d8Cb20\",\"node_stake_factory\":\"0xcB0841cc3DBDE97aC52B945F02Ee4F3D8707d977\",\"ticket_price_oracle\":\"0xFA251d4C367683d6181531afd5964E660aCf43A0\",\"token\":\"0xD4fdec44DB9D44B8f2b6d529620f9C0C7066A2c1\",\"winning_probability_oracle\":\"0xa641822a52AcbDc0c0123337f715C1d9756c21bD\"}"
version: "1"
health: OK
active_txs: {}
